--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<<<<<<< HEAD
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
     <title>Petlove</title>
-=======
-    <link href="/src/assets/main.css" rel="stylesheet" />
-    <title>Vite App</title>
->>>>>>> 6d7e39305364895171f1c995abacf1dd395a4681
   </head>
   <body>
     <div id="app"></div>
